Disable fixed position of floatingBox on IOS. Closest it can get to momentum scrolling support.

--- a/App/dark.css
+++ b/App/dark.css
@@ -24,7 +24,7 @@
     background-color: rgb(19, 24, 32);
 }
 
-.t-dark div.floatingBox {
+.t-dark div#floatingBox {
     background-color: rgb(38, 49, 65);
 }
 
